# BoxBlur

./: Blur.c  Blur.h  CMakeLists.txt  Image.c  Image.h  Main.c
lodepng/: CMakeLists.txt  Credit.txt  lodepng.c
